# python-poetry-template

./: .flake8  Makefile  README.md  mypy.ini  pyproject.toml
tests/unit/: test_hello.py
